--- a/src/app/hotels/hotel-searchbar/hotel-searchbar.component.css
+++ b/src/app/hotels/hotel-searchbar/hotel-searchbar.component.css
@@ -95,7 +95,7 @@
   font-size: 12px;
 }
 
-.customDropdown {
+.hotel-searchbar .customDropdown {
   height: 80px;
   border-radius: 0.1px;
 }
